# iot-devkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
MXChip/AZ3166/: CMakeLists.txt
MXChip/AZ3166/app/: CMakeLists.txt  board_init.c  board_init.h  cloud_config.h  cmsis_utils.h  console.c  main.c  screen.c  screen.h  sntp_client.c  sntp_client.h  threadx_pnp_info.h  wwd_networking.c  wwd_networking.h
MXChip/AZ3166/app/startup/: MXChip_AZ3166.ld  startup_stm32f412rx.s  system_stm32f4xx.c  tx_initialize_low_level.S
MXChip/AZ3166/cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake
MXChip/AZ3166/lib/: CMakeLists.txt
MXChip/AZ3166/lib/mxchip_bsp/ssd1306/: ssd1306_conf.h
MXChip/AZ3166/lib/netxduo/: nx_user.h
MXChip/AZ3166/lib/threadx/: tx_user.h
MXChip/AZ3166/lib/wiced_sdk/: CMakeLists.txt
MXChip/AZ3166/scripts/: build.bat  build.sh  deploy.bat
cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake  utilities.cmake
shared/lib/nanoprintf/: CMakeLists.txt  nanoprintf.c
shared/src/: CMakeLists.txt  newlib_nano.c
